<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDDCCB"
        tools:context=".MainActivity">


    <Button
            android:id="@+id/mCameraButton"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="#048524"
            android:fontFamily="sans-serif-medium"
            android:text="@string/buttonTakePhoto"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/mGalleryButton"
            android:layout_width="198dp"
            android:layout_height="46dp"
            android:layout_marginBottom="20dp"
            android:background="#048524"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:text="@string/buttonSelectPhoto"
            android:textColor="#FFFFFF"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintEnd_toStartOf="@+id/mCameraButton"
            app:layout_constraintHorizontal_bias="0.647"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/descriptionImage"
            app:layout_constraintBottom_toTopOf="@+id/mDetectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@android:color/darker_gray" />

    <Button
            android:id="@+id/mDetectButton"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:layout_marginBottom="16dp"
            android:background="#048524"
            android:text="@string/buttonDiagnose"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/mResultTextView"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="28dp"
            android:text="@string/defaultImage"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="248dp"
            android:layout_height="42dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/welcome_to_green_doctor"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/mGalleryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="1.0" />

    <view
            android:id="@+id/view"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="411dp"
            android:layout_height="38dp"
            android:background="#048524"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>